--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <label for="weight">Weight(kg)</label>
       <input type=" " id="weight" class="weight" placeholder="insert weight">
 
-      <label for="height">Height(cm)</label>
+      <label for="height">Height(m)</label>
       <input type=" " id="height" class="height" placeholder="insert height">
 
 
